--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^8.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.9",
     "jotai": "^2.12.5",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
